# Minecraft_TeamViewer

./: .gitignore  README.md  RENDER_MODULE_MIGRATION.md  Taskfile.yml  gradle.properties
.github/workflows/: build.yml  codeql.yml  dependency-review.yml  dependency-submission.yml  work.yml
Server/: Dockerfile  HANDSHAKE_PROTOCOL.md  QUICKSTART.md  UPDATE.md  client_example.js  client_example.py  player_esp_server.py  pyproject.toml
Server/src/: main.py
Server/static/: index.html
backend-server/: README.md  docker-compose.yml  pyproject.toml
backend-server/src/: main.py
backend-server/src/server/: broadcaster.py  codec.py  models.py  nodemc_proxy.py  protocol.py  server_state_config.toml  state.py  uuid_codec.py
backend-server/src/static/: index.html
docs/: PLAYER_ESP_NETWORK_PROTOCOL.md  RENDER_MODULE_MIGRATION.md
independence_mod/: CompressionTest.md  PLAYER_ESP_NETWORK_PROTOCOL.md  RENDER_MODULE_MIGRATION.md  build.gradle  gradle.properties  main.py
independence_mod/server/: broadcaster.py  state.py
independence_mod/static/: index.html  nodemc_map_projection.js  nodemc_projection_test.user.js
minecraft-mod/: build.gradle  gradle.properties
tampermonkey-script/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
tampermonkey-script/src/: autoMarkSync.ts  configTransfer.ts  constants.ts  env.d.ts  index.ts  mapProjection.ts  meta.ts  networkSchemas.ts  overlayUtils.ts  panelTemplate.ts  settingsUi.ts  (+2 more)
web-server/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
wurst-plugin/: build.gradle  gradle.properties
(+97 files in other folders)
