[project]
name = "TeamViewer-web-server"
version = "0.4.0"
description = "一个用于共享团队视野的服务端网页代码"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "httpx[http2,socks]>=0.28.1",
    "msgpack>=1.1.2",
    "uvicorn[standard]>=0.40.0",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"